--- a/course/02_FilePaths/index.qmd
+++ b/course/02_FilePaths/index.qmd
@@ -13,9 +13,9 @@ toc-depth: 5
 [![AGPL-3.0](https://img.shields.io/badge/license-AGPLv3-blue)](https://www.gnu.org/licenses/agpl-3.0.en.html) [![CC BY-SA 4.0](https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg)](http://creativecommons.org/licenses/by-sa/4.0/)
 :::
 
-For the YouTube livestream recording, see [here](https://www.youtube.com/live/9AvU24FxY-4?si=HnP2AH8KOj0hmyZv&t=231)
+For the YouTube livestream recording, see [here](https://www.youtube.com/live/fwSu97DYlaU?si=R3DpH9dRuUCexJMN)
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9AvU24FxY-4?si=HnP2AH8KOj0hmyZv&amp;start=231" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fwSu97DYlaU?si=R3DpH9dRuUCexJMN&amp;start=22" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 For screen-shot slides, click [here](/course/02_FilePaths/slides.qmd)
@@ -614,7 +614,7 @@ list.files(path="data/target", full.names=FALSE, recursive=FALSE)
 
 <br>
 
-While this works in your particular context, if you are sharing the code with others who have a different operating system, these hard-coded / or \ will cause the code for them to error out at these particular steps. 
+While this works in your particular context, if you are sharing the code with others who have a different operating system, these hard-coded "/" or "\" will cause the code for them to error out at these particular steps. 
 
 ---
 
