--- a/course/02_FilePaths/slides.qmd
+++ b/course/02_FilePaths/slides.qmd
@@ -962,7 +962,7 @@ So here we encounter the first challenge when communicating to our computer wher
 
 ::: {.fragment}
 ::: {.callout-tip title="."}
-One way we can do this is through a file.path argument. We could potentially provide this by adding either a / or a \ into the path argument, depending on your computers operating system. 
+One way we can do this is through a file.path argument. We could potentially provide this by adding either a "/" or a "\" into the path argument, depending on your computers operating system. 
 :::
 :::
 
@@ -1700,12 +1700,13 @@ Plug in an external hard-drive or USB into your computer. Manually, create a fol
 ---
 
 :::{.callout-tip title="Problem 2"}
-In this session, we used `list.files()` with the "full.names argument" set to TRUE, as well as the `basename()` function to identify specific files. But what if you wanted a particular directory. Run `list.files()` with "full.names argument" and "recursive" argument set to TRUE, and then search online to find an R function that would retrieve the "" individual directory folders. :::
+In this session, we used `list.files()` with the "full.names argument" set to TRUE, as well as the `basename()` function to identify specific files. But what if you wanted a particular directory. Run `list.files()` with "full.names argument" and "recursive" argument set to TRUE, and then search online to find an R function that would retrieve the "" individual directory folders. 
+:::
 
 ---
 
 :::{.callout-tip title="Problem 3"}
-R packages often come with internal datasets, that are typically used for use in the help documentation examples. These can be accessed through the use of the `system.file()` function. See an example below. 
+R packages often come with internal datasets, that are typically used for use in the help documentation examples. These can be accessed through the use of the `system.file()` function. See an example code below. 
 
 ```{r}
 #| eval: FALSE
